--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@ function throttle(func, limit) {
         formPhone: "Telefon (valgfrit)",
         formPhonePlaceholder: "+45 00 00 00 00",
         formMessage: "Kort beskrivelse (valgfrit)",
-        formMessagePlaceholder: "Har du specifikke bekymringer?",
+        formMessagePlaceholder: "Hvad kan jeg hjælpe dem med?",
         submitBtn: "Anmod om Tid",
         sessionInfoTitle: "Sessioninformation",
         sessionSchedule: "🕒 Fleksibel planlægning: hverdage & weekender",
