--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@ function throttle(func, limit) {
         navServices: "Services",
         navBooking: "Booking",
         navContact: "Contact",
-        heroTitle: "Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual and Lasting Transformation",
+        heroTitle: "Experienced Social Worker with Advanced NLP Therapy Skills for Your Individual Transformation",
         heroSubtitle: "Combining the power of Neuro-Linguistic Programming with compassionate psychotherapy. Specialized in rapid change techniques for individuals and couples. Available in-person in Holstebro or within secure online sessions.",
         heroCta: "Schedule a Consultation",
         trustNLP: "NLP Master and Practitioner",
@@ -1368,7 +1368,7 @@ function throttle(func, limit) {
         navServices: "Tjenester",
         navBooking: "Booking",
         navContact: "Kontakt",
-        heroTitle: "Erfaren Socialrådgiver med Avancerede NLP Terapifærdigheder til Din Individuelle og Varige Transformation",
+        heroTitle: "Erfaren Socialrådgiver med Avancerede NLP Terapifærdigheder til Din Individuelle Transformation",
         heroSubtitle: "Kombinerer kraften fra Neuro-Lingvistisk Programmering med medfølende psykoterapi. Specialiseret i hurtige forandringsteknikker for enkeltpersoner og par. Tilgængelig personligt i Holstebro eller via online-sessioner.",
         heroCta: "Book en Konsultation",
         trustNLP: "NLP Mester og Practitioner",
@@ -1488,7 +1488,7 @@ function throttle(func, limit) {
         navServices: "Послуги",
         navBooking: "Запис",
         navContact: "Контакти",
-        heroTitle: "Досвідчений соціальний працівник з передовими навичками НЛП-терапії для вашої індивідуальної та тривалої трансформації",
+        heroTitle: "Досвідчений соціальний працівник з передовими навичками НЛП-терапії для вашої індивідуальної трансформації",
         heroSubtitle: "Поєднання сили нейро-лінгвістичного програмування з співчутливою психотерапією. Спеціалізуюся на техніках швидких змін для окремих осіб та пар. Доступні особисті зустрічі в Хольстебро або через онлайн-сесії.",
         heroCta: "Записатися на консультацію",
         trustNLP: "Майстер та практик НЛП",
@@ -1608,7 +1608,7 @@ function throttle(func, limit) {
         navServices: "Услуги",
         navBooking: "Запись",
         navContact: "Контакты",
-        heroTitle: "Опытный социальный работник с передовыми навыками НЛП-терапии для вашей индивидуальной и длительной трансформации",
+        heroTitle: "Опытный социальный работник с передовыми навыками НЛП-терапии для вашей индивидуальной трансформации",
         heroSubtitle: "Сочетание силы нейро-лингвистического программирования с сострадательной психотерапией. Специализируюсь на техниках быстрых изменений для отдельных людей и пар. Доступны личные встречи в Хольстебро или через онлайн-сессии.",
         heroCta: "Записаться на консультацию",
         trustNLP: "Мастер и практик НЛП",
