--- a/index.html
+++ b/index.html
@@ -1876,7 +1876,7 @@ function throttle(func, limit) {
       const messageInput = document.querySelector('#bk_message');
       if (messageInput) messageInput.placeholder = t.formMessagePlaceholder;
       
-      updateElement('#bookingBtn', t.submitBtn);
+      updateElement('#bookingBtnText', t.submitBtn);
       
       updateElement('.glass h3', t.sessionInfoTitle);
       const sessionInfo = document.querySelectorAll('.glass p');
