--- a/index.html
+++ b/index.html
@@ -164,15 +164,30 @@ summary:focus-visible {
       border: 2px solid rgba(255,255,255,.1);
     }
    
-    .brand-name {
-      font-size:1.075rem;
-      font-weight:700;
-      color:#ffffff;
-      letter-spacing:.2px;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
+   .brand-name {
+  font-size: 0.95rem;
+  font-weight: 700;
+  color: #ffffff;
+  letter-spacing: .2px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 320px;
+}
+
+@media (min-width: 1100px) {
+  .brand-name {
+    max-width: 450px;
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1300px) {
+  .brand-name {
+    max-width: none;
+    font-size: 1.075rem;
+  }
+}
    
     .nav-right { display:flex; align-items:center; gap:.75rem; }
    
@@ -297,11 +312,12 @@ summary:focus-visible {
 
     .trust-indicators {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      gap: 2rem;
+      gap: 1rem 2rem;
       margin-top: 3rem;
-      padding: 1.5rem;
+      padding: 1.5rem 1rem;
       background: rgba(255,255,255,.1);
       border-radius: 16px;
       backdrop-filter: blur(8px);
@@ -311,10 +327,20 @@ summary:focus-visible {
       display: flex;
       align-items: center;
       gap: .5rem;
-      font-size: .9rem;
+      font-size: .85rem;
       opacity: .9;
+      white-space: nowrap;
     }
 
+    @media (max-width: 992px) {
+      .trust-indicators {
+        gap: 0.75rem 1.5rem;
+      }
+      
+      .trust-item {
+        font-size: .8rem;
+      }
+    }
     section { scroll-margin-top:80px; }
     .about, .services, .booking, .contact, .faq { padding:5rem 0; }
     .about, .faq, .booking { background:#000000; color: #ffffff; }
